finishing adding bloc